# he-crusk

./: CMakeLists.txt  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml
benchmark/: CMakeLists.txt
benchmark/he_crusk/: CMakeLists.txt  poly_func.cpp  summarize.sh  test.cpp
include/he_crusk/: he_crusk.hpp  randomized_ciphertext.hpp  sub_key.hpp
include/he_wrapper_tmpl/: he_wrapper_tmpl.hpp  raw_scalar.hpp  raw_vec.hpp
include/he_wrapper_tmpl/base/: base.hpp  operator.hpp
include/he_wrapper_tmpl/seal/: ciphertext.hpp  encoding_params.hpp  encoding_params_func_def.hpp  key_manager.hpp  operator.hpp  operator_modified_seal.hpp  plaintext.hpp  seal.hpp
include/util/: error.hpp  for_loop.hpp  process_monitor.hpp  stream.hpp  string.hpp  timer.hpp  util.hpp
src/: process_monitor.cpp
